@@ -55,7 +55,7 @@ favicon: assets/images/favicon.png
 # The logo of the documentation shown in the header and navigation can either
 # be a Material Icon ligature or an image URL
 logo:
-  icon: school
+  icon: "\uE80C"
 
 # Material includes the search in the header as a partial, not as a separate
 # template, so it's correct that search.html is missing
