@@ -1,5 +1,6 @@
 mkdocs-material-2.x.x (2017-xx-xx)
 
+  * Added Russian translations
   * Fixed #553: meta title and description only renders first character
   * Fixed favicon regression caused by deprecation upstream
 
